# tool-augmented-conversation-simulator

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
docs/: TACS_FULL_DOCUMENTATION.md
tacs/: cli.py  config.py  llm.py
tacs/agents/: assistant_agent.py  base.py  models.py  pipeline.py  planner_agent.py  sampler_agent.py  user_proxy.py  validator_agent.py
tacs/execution/: executor.py
tacs/graph/: builder.py  models.py  sampler.py
tacs/memory/: store.py
tacs/registry/: loader.py  models.py  registry.py
tests/e2e/: test_pipeline.py
tests/unit/: test_graph.py  test_memory.py  test_registry.py
