[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tacs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "networkx>=3.0",
    "click>=8.0",
    "mem0ai>=0.1",
    "openai>=1.0",
    "anthropic>=0.20",
    "ollama>=0.2",
    "python-dotenv>=1.0",
    "faker>=24.0",
    "tqdm>=4.0",
]

[project.scripts]
tacs = "tacs.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tacs*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
