[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tacs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic~=2.12",
    "pydantic-settings~=2.13",
    "networkx~=3.6",
    "click~=8.3",
    "mem0ai~=1.0",
    "openai~=2.29",
    "anthropic~=0.85",
    "ollama~=0.6",
    "python-dotenv~=1.2",
    "faker~=40.0",
    "tqdm~=4.67",
]

[project.scripts]
tacs = "tacs.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tacs*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
